--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -25,4 +24,14 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.block{
+  background-color: red;
+  margin: 10px;
+  padding:5px;
+  width:300px;
+  height: 400px;
+  border-radius: 5px;
+  border:2px solid #222;
 }
